Improve navigation - ADD Breadcrumb path - FIX show pagination always to avoid jumping - FIX remove redundant module default export - HACK show scrollbar always to avoid jumping

--- a/app/assets/stylesheets/gi_album/engine.css
+++ b/app/assets/stylesheets/gi_album/engine.css
@@ -14,6 +14,15 @@
  *= require_self
  */
 
+/*
+ * HACK KI show scrollbar always to avoid jumping (not very optimal solution, but
+ * should temporarily fix flickering)
+ */
+html {
+  overflow: -moz-scrollbars-vertical;
+  overflow: scroll;
+}
+
 gi-table-fixed {
   table-layout: fixed;
 }
